--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,27 @@
 main {
   min-height: 80vh;
 }
+h1 {
+  font-size: 1.4rem;
+  padding: 0.1rem;
+  margin: 0;
+}
+h2 {
+  font-size: 1rem;
+  padding: 0.1rem 0;
+  margin: 0;
+}
 h3 {
   padding: 1rem 0;
+  margin: 0;
 }
-
 .rating span {
   margin: 0.1rem;
 }
 .header-links {
   color: rgb(201, 201, 201);
   margin: 8px;
+}
+.btn-block {
+  width: 100%;
 }
